--- a/Lifestyles.Infrastructure.Database/Lifestyles.Infrastructure.Database.csproj
+++ b/Lifestyles.Infrastructure.Database/Lifestyles.Infrastructure.Database.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lifestyles.Domain\Lifestyles.Domain.csproj" />
+    <ProjectReference Include="..\Lifestyles.Service\Lifestyles.Service.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
