--- a/Lifestyles.Api/Lifestyles.Api.csproj
+++ b/Lifestyles.Api/Lifestyles.Api.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lifestyles.Domain\Lifestyles.Domain.csproj" />
+    <ProjectReference Include="..\Lifestyles.Infrastructure.Database\Lifestyles.Infrastructure.Database.csproj" />
+    <ProjectReference Include="..\Lifestyles.Service\Lifestyles.Service.csproj" />
+  </ItemGroup>
+
 </Project>
