--- a/Lifestyles.Api/Lifestyles.Api.csproj
+++ b/Lifestyles.Api/Lifestyles.Api.csproj
@@ -14,7 +14,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Lifestyles.Domain\Lifestyles.Domain.csproj" />
-    <ProjectReference Include="..\Lifestyles.Infrastructure.Database\Lifestyles.Infrastructure.Database.csproj" />
+    <ProjectReference Include="..\Lifestyles.Infrastructure.Default\Lifestyles.Infrastructure.Default.csproj" />
+    <ProjectReference Include="..\Lifestyles.Infrastructure.Session\Lifestyles.Infrastructure.Session.csproj" />
     <ProjectReference Include="..\Lifestyles.Service\Lifestyles.Service.csproj" />
   </ItemGroup>
 
