--- a/Lifestyles.Api/Lifestyles.Api.csproj
+++ b/Lifestyles.Api/Lifestyles.Api.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>disable</Nullable>
+    <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,8 +14,42 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Lifestyles.Domain\Lifestyles.Domain.csproj" />
-    <ProjectReference Include="..\Lifestyles.Service\Lifestyles.Service.csproj" />
+    <ProjectReference Include="..\Lifestyles.Domain.Node\Lifestyles.Domain.Node.csproj" />
     <ProjectReference Include="..\Lifestyles.Infrastructure.Session\Lifestyles.Infrastructure.Session.csproj" />
+    <ProjectReference Include="..\Lifestyles.Service\Lifestyles.Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+      <None Update="Budget/Defaults/budgets.digital-nomad.connect.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.digital-nomad.nourish.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.digital-nomad.shelter.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.digital-nomad.travel.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.digital-nomad.wear.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      
+      <None Update="Budget/Defaults/budgets.thru-hiker.connect.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.thru-hiker.nourish.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.thru-hiker.shelter.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.thru-hiker.travel.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.thru-hiker.wear.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      
+      <None Update="Budget/Defaults/budgets.thru-traveler.connect.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.thru-traveler.nourish.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.thru-traveler.shelter.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.thru-traveler.travel.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.thru-traveler.wear.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      
+      <None Update="Budget/Defaults/budgets.weekend-warrior.connect.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.weekend-warrior.nourish.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.weekend-warrior.shelter.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.weekend-warrior.travel.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Budget/Defaults/budgets.weekend-warrior.wear.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      
+      <None Update="Categorize/Defaults/categories.digital-nomad.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Categorize/Defaults/categories.thru-hiker.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Categorize/Defaults/categories.thru-traveler.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+      <None Update="Categorize/Defaults/categories.weekend-warrior.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
+
+      <None Update="Live/Defaults/lifestyles.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
   </ItemGroup>
 
 </Project>
