--- a/Lifestyles.Infrastructure.Session/Lifestyles.Infrastructure.Session.csproj
+++ b/Lifestyles.Infrastructure.Session/Lifestyles.Infrastructure.Session.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <ImplicitUsings>disable</ImplicitUsings>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Lifestyles.Domain\Lifestyles.Domain.csproj" />
+    <ProjectReference Include="..\Lifestyles.Domain.Node\Lifestyles.Domain.Node.csproj" />
     <ProjectReference Include="..\Lifestyles.Service\Lifestyles.Service.csproj" />
   </ItemGroup>
 
